# sppark-halo2

./: .gitignore  Cargo.toml
poc/msm-cuda/: Cargo.toml  build.rs
poc/msm-cuda/cuda/: pippenger_inf.cu
poc/msm-cuda/src/: lib.rs  util.rs
poc/msm-cuda/tests/: msm.rs
rust/: Cargo.toml  build.rs
