[package]
name = "sppark-msm"
version = "0.1.0"
edition = "2021"

[features]
# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
default = []
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = [ "blst/portable" ]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = [ "blst/force-adx" ]
quiet = []
cuda-mobile = []

[dependencies]
#blst = "=0.3.10"
blst = { git = "https://github.com/supranational/blst" }
sppark = { path = "../../rust" }
rand = "^0"
rand_chacha = "^0"
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }
rayon = "1.5"